<resources>
    <string name="app_name">Ribbons</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="facebook_app_id">316730028725192</string>
    <string name="action_settings">Settings</string>
    <string name="name">Username</string>
    <string name="password">Password</string>
    <string name="forgot_pass">Forgot Your Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="create_acc">Create Account</string>
    <string name="enter_mail">Email id</string>
    <string name="re_password">Re - enter password</string>
    <string name="next">Next</string>
    <string name="frst_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="dob">Date of birth</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="ph_number">Phone number</string>
    <string name="ribbon_pin">Ribbon pin</string>
    <string name="location">Location</string>
    <string name="verify_code">Verification Code</string>
    <string name="type_verify_code">Please type the verification code sent \n to +963852147</string>
    <string name="select">Select</string>
    <string name="menu_search">Menu</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_navigation">Navigation</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="menu_myribbons">My Ribbons</string>
    <string name="menu_ribbons">Ribbons</string>
    <string name="menu_notification">Notifications</string>
    <string name="menu_brands">Brands</string>
    <string name="menu_home">Home</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="send_voucher">Send Voucher</string>
    <string name="last_list">Last Visit</string>
    <string name="refer_app">Refer App</string>
    <string name="about">About</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="or">or</string>
    <string name="menu">Menu</string>
    <string name="searchlocation_brand">Search Location / Brand</string>
    <string name="logout">Logout</string>
    <string name="tab_home">Home</string>
    <string name="tab_myribbon">My Ribbons</string>
    <string name="tab_ribbon">Ribbons</string>
    <string name="tab_notifications">Notifications</string>
    <string name="tab_brands">Brands</string>
    <string name="Cafe">Cafe Coffee Day</string>
    <string name="voucher">This Voucher is validate for any item in this shop</string>
    <string name="untieribbon">Untie Ribbon</string>
    <string name="clickuntie">Click untie ribbon to get this voucher</string>
    <string name="viewoffer">View All Offers</string>
    <string name="get">Get 50 discount for \n 50 points</string>
    <string name="congrats">Congratulations</string>
    <string name="ribbon_added">Ribbon added to My Ribbons</string>
    <string name="view_my_ribbon">View My Ribbons</string>
    <string name="number">1314</string>
    <string name="vaild_voucher">This Voucher is\n valide for any item \n in this shop</string>
    <string name="dont_sufficient">You dont have sufficient points</string>
    <string name="trade">Trade 100 points?</string>
    <string name="confirm">Confirm</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="acc_info">Account Information</string>
    <string name="change_pass">Change Password</string>
    <string name="email">Email</string>
    <string name="email_data">Sathishkumar1314@gmail.com</string>
    <string name="royapettah">Royapettah</string>
    <string name="number_data">+91987321456</string>
    <string name="sathish">Sathish</string>
    <string name="kumar">Kumar</string>
    <string name="save">Save</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_profile">My Profile</string>
    <string name="old_pass">Old Password</string>
    <string name="new_pass">New Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="viewoffer_only">View Offer</string>
    <string name="ribbon_data">10 Ribbons</string>
    <string name="enter_ribbon_pin">Enter Ribbon Pin</string>
    <string name="enter_friend_pin">Enter your friend ribbon pin to send</string>
    <string name="are_you_sure">Are you sure want to send this</string>
    <string name="voucher_to">voucher to</string>
    <string name="prakash">PrakashRaj</string>
    <string name="q_mark">\?</string>
    <string name="select_brand">Please select a brand</string>
    <string name="we_like_to_hire">We like to hear from you</string>
    <string name="type_your_msg">Type your message here</string>
    <string name="ok">Ok</string>
    <string name="loading">Loading ...</string>
    <string name="credentials">ZE7SSi8zGlgTuEmzkAsEShDS4iAaKCqqINOfqC4b</string>
    <string name="client_id">2</string>
    <string name="grant_type">password</string>
    <string name="accept">application/json</string>
    <string name="token_type">Bearer</string>
    <string name="no_notify">No Notifications</string>
    <string name="oops">Oops ! something went wrong</string>
    <string name="no_internet">No internet connection</string>
    <string name="ribbon_pin_mandatory">Ribbon pin mandatory !</string>
    <string name="submit">Submit</string>
    <string name="submits">Submit</string>
    <string name="refer_code">Referral Code (Optional)</string>
    <string name="last_visit">Last Visit</string>
    <string name="email_enter">Enter your email</string>


</resources>
