<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context="com.ribbons.activities.ChangePassword">
    <android.support.design.widget.AppBarLayout
        android:background="#fff"
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
        android:id="@+id/toolbar"
        layout="@layout/global_toolbar">
    </include>
    </android.support.design.widget.AppBarLayout>
    <LinearLayout

        android:layout_below="@+id/appBar"
        android:layout_marginTop="@dimen/common_margin_twenty"
        android:layout_above="@+id/bt_FooterSave"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:textStyle="bold"
            android:textSize="@dimen/font_normal"
            android:text="@string/old_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:inputType="textPassword"
            android:id="@+id/ed_oldPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:textStyle="bold"
            android:textSize="@dimen/font_normal"
            android:text="@string/new_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:inputType="textPassword"
            android:id="@+id/ed_newPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:textStyle="bold"
            android:textSize="@dimen/font_normal"
            android:text="@string/confirm_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:inputType="textPassword"
            android:id="@+id/ed_confirmPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:background="@color/colorGrayDrak"
        android:textSize="@dimen/font_normal"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        android:text="@string/save"
        android:id="@+id/bt_FooterSave"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</RelativeLayout>
