<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ribbons.activities.FeedBackActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:gravity="center">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/ivMenu"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:src="@drawable/menuhome" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/ivMenu"
                    android:text="@string/send_voucher"
                    android:textAllCaps="true"
                    android:textColor="@color/colorGlobal"
                    android:textSize="@dimen/font_large" />
            </RelativeLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appBar"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/common_margin_twenty"
            android:layout_marginTop="@dimen/common_margin_ten"
            android:text="@string/select_brand"
            android:textColor="@color/colorGlobal"
            android:textSize="@dimen/font_large" />

        <android.support.v7.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_margin="@dimen/common_margin_twenty"
            app:cardCornerRadius="@dimen/common_margin_five"
            app:cardElevation="@dimen/common_margin_five">

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinnerFeedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/common_margin_five"
                android:backgroundTint="@color/basic_black">

            </android.support.v7.widget.AppCompatSpinner>

        </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/common_margin_twenty"
            android:layout_marginTop="@dimen/common_margin_ten"
            android:text="@string/we_like_to_hire" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="@dimen/common_margin_twenty"
            android:background="@drawable/edittext_bg_feedback"
            android:elevation="@dimen/common_margin_five"
            android:gravity="top"
            android:hint="@string/type_your_msg"
            android:padding="@dimen/common_margin_ten" />

    </LinearLayout>

    <Button
        android:textStyle="bold"
        android:textSize="@dimen/font_normal"
        android:textColor="@color/colorWhite"
        android:text="@string/ok"
        android:background="@drawable/button_bg_globalred"
        android:layout_marginBottom="@dimen/common_margin_ten"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_width="150dp"
        android:layout_height="wrap_content" />

</RelativeLayout>
