<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp">

        <ImageView
            android:id="@+id/ivCancel"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentRight="true"
            android:elevation="5dp"
            android:src="@drawable/ribbon_cancel_black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_margin_ten"
            android:background="@drawable/dotted_bg"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/common_margin_ten"
                android:text="@string/congrats"
                android:textColor="@color/home_menuColor"
                android:textSize="@dimen/font_large"
                android:textStyle="bold" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/ribbon_added"
                android:textColor="@color/basic_black"
                android:textSize="@dimen/font_normal" />

            <Button
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/common_margin_ten"
                android:layout_marginTop="@dimen/common_margin_ten"
                android:background="@drawable/button_bg_lite_red"
                android:text="@string/view_my_ribbon"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>
</LinearLayout>