<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context="com.ribbons.activities.SettingsActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff">

        <android.support.v7.widget.Toolbar
            android:id="@id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>


    <LinearLayout
        android:id="@+id/linearAcc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appBar"
        android:layout_marginTop="@dimen/common_margin_ten"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_accInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/toolbar"
            android:layout_marginLeft="@dimen/common_margin_ten"
            android:layout_marginRight="@dimen/common_margin_ten"
            android:layout_weight="1"
            android:text="@string/acc_info"
            android:textColor="@color/basic_black"
            android:textSize="@dimen/font_normal" />

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_action_rightarrow" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearChangePass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearAcc"
        android:layout_marginTop="@dimen/common_margin_ten"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_changePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="@dimen/common_margin_ten"
            android:layout_marginRight="@dimen/common_margin_ten"
            android:layout_weight="1"
            android:text="@string/change_pass"
            android:textColor="@color/basic_black"
            android:textSize="@dimen/font_normal" />

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_action_rightarrow" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linear_Noification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearChangePass"
        android:layout_marginTop="@dimen/common_margin_ten"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/common_margin_ten"
            android:layout_marginRight="@dimen/common_margin_ten"
            android:layout_weight="1"
            android:text="@string/menu_notification"
            android:textColor="@color/basic_black"
            android:textSize="@dimen/font_normal" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/switchs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/common_margin_ten"
            app:theme="@style/MySwitch" />

    </LinearLayout>


    <TextView
        android:id="@+id/tv_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linear_Noification"
        android:layout_marginLeft="@dimen/common_margin_ten"
        android:layout_marginRight="@dimen/common_margin_ten"
        android:layout_marginTop="@dimen/common_margin_ten"
        android:text="@string/logout"
        android:textColor="@color/basic_black"
        android:textSize="@dimen/font_normal" />

</RelativeLayout>
